--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mazen-bilbeisi-qa-assessment",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a sample project to solve an interview assessment",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.20.1"
+    "@types/chai": "^4.3.12",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.20",
+    "chai": "^4.4.1",
+    "ethers": "^6.11.1",
+    "hardhat": "^2.20.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "web3": "^4.5.0",
+    "dotenv": "^16.4.5"
   }
 }
