--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.20",
     "chai": "^4.4.1",
+    "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "hardhat": "^2.20.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "web3": "^4.5.0",
-    "dotenv": "^16.4.5"
+    "web3": "^4.5.0"
   }
 }
